# Aligned

./: .env.example  .gitignore  README.md  app.json  details.md  docker-compose.yaml  eas.json  global.d.ts  package-lock.json  package.json  tailwind.config.js
app/: _layout.tsx  dating-preferences.tsx  index.tsx  login.tsx  profile-update.tsx  settings.tsx
app/(tabs)/: _layout.tsx  chats.tsx  index.tsx  likes.tsx  profile.tsx  start.tsx
app/auth/: _layout.tsx  details.tsx  images.tsx  interstitial.tsx  phone.tsx  profile.tsx  prompts.tsx  verify.tsx
backend/: Cargo.toml
backend/migrations/: 0002_users_email_unique_not_null.sql  0003_users_firebase_uid.sql  0004_add_object_key_to_user_images.sql  0005_add_status_for_uploading_images.sql  001_init.sql
backend/src/: jwtauth.rs  lib.rs  main.rs  r2_client.rs
backend/src/db/: images_queries.rs  interact_queries.rs  mod.rs  profile_queries.rs  seed.rs  user_queries.rs
backend/src/file_storage/: file_service.rs  mod.rs
backend/src/firebaseauth/: middleware.rs  mod.rs  verifier.rs
backend/src/models/: inputs.rs  mod.rs  outputs.rs  state.rs
backend/src/routes/: auth.rs  feed.rs  interactions.rs  matches.rs  mod.rs  profile.rs  prompts.rs  user.rs
components/: ProfileCard.tsx  UserDetailsForm.tsx
constants/: icons.ts  preferences.ts
data/: profiles.ts
lib/api/: client.ts  endpoints.ts
lib/auth/: firebase-auth.ts
lib/context/: AuthContext.tsx  UserContext.tsx
resources/: api.md
