[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
actix-multipart = "0.7.2"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
chrono = "0.4"
