[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
actix-multipart = "0.7.2"
actix-cors = "0.7"
actix-web-httpauth = "0.8"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "uuid", "chrono"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
chrono = { version = "0.4", features = ["serde"] }
firebase-auth = { version = "0.5.1", features = ["actix-web"] }
futures = "0.3.31"
aws-config = { version= "1.8.12", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.15"
anyhow = "1.0"
bytes = "1.0"
serde_bytes = "0.11.19"
